--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -18,8 +18,9 @@ readme.txt for details:
 Linux Installation from Source
 -------------------------------
 - requires plib 1.8.3, FreeGLUT or GLUT, be aware to compile plib with -fPIC on AMD64.
-- requires OpenAL from www.torcs.org for best sound quality.
-- untar the archive
+  Be aware that maybe just 1.8.3 works.
+- Requires OpenAL from www.torcs.org for best sound quality.
+- Untar the archive
 - cd into the torcs-1.2.4 directory
 - ./configure (use --help for showing the options, of interest might be
   --enable-debug and --disable-xrandr).
@@ -163,7 +164,12 @@ Changes since 1.2.3
 - Various fixes found with valgrind: potential crash bug in new smoke code,
   a few leaks in other places (Bernhard).
 - Olethros writes data files to correct location (Christos).
-
+- Car-pitwall collisions now fine, problem was mix up of local/global
+  oriented vectors (Bernhard).
+- Update sound max. 50 times per second (perhaps this helps with the plib
+  timing problem) (Bernhard).
+- Improved car-car collisions (Bernhard).
+- Alignd widgets in sound config screen (Bernhard).
 
 
 TODO for 1.2.4
@@ -171,15 +177,13 @@ TODO for 1.2.4
 - Fix XSLT/DTD for viewing results (Report by Eugen)
 - Bugfixes and cleanup.
 - Add cameras (alpine, spring)
-- + align widgets in sound config screen.
-- + check for ssgSimpleStates and replace with grManagedState where appropriate.
 - Check for lost open filehandles in Windows module loader.
-- + Update sound maximum 30-50 times a second (perhaps this helps with the plib
-  timing problem).
-- + Does sound stop in menus?
-- + grep for strndups not guarded by portability.h.
-- + There was a rpoblem regarding sqrt and vc++ .NET, search mail and fix.
-- + Have a look at Andrews sf report.
+- There was a problem regarding sqrt and vc++ .NET, search mail and fix it.
+- Have a look at Andrews sf report. I already investigated this with no result,
+  but it is obvious that something is wrong. I checked so far all values up to
+  SimConfig, and they match in every run... weird. I guess it must be a problem
+  in raceengineclient, because if I comment out the simu call in ReOneStep the
+  result is the same.
 - Windows port.
 - Windows installer.
 - All-in-one.
@@ -194,6 +198,7 @@ TODO for 1.2.4
 
 TODO for 1.2.5 (or 1.3.0 for SDL) (estimate: goal 12.2005, real 2.2006)
 ---------------------------------
+- SDL port (or 1.3.0 or 1.4.0, not decided finally)
 - Check for memory leaks.
 - make use of pbuffers to render trackmap if available.
 - Add valgrind option to "torcs".
@@ -212,8 +217,7 @@ TODO for 1.2.5 (or 1.3.0 for SDL) (estimate: goal 12.2005, real 2.2006)
 - merge berniw_2004 code into berniw's (rescheduled, a bit more testing will
   not hurt).
 - merge bt_2004 into bt.
-- SDL port (or 1.3.0 or 1.4.0, not decided finally)
-- review simuv2
+- review simuv2 (e.g. rollres).
 - possibility of one pit for 2 cars of one module.
 - fix tools (accc, trackgen, etc, these are way too touchy).
 - make trackgen generate two sides for barriers and use just one sided
@@ -235,12 +239,26 @@ TODO for 1.2.5 (or 1.3.0 for SDL) (estimate: goal 12.2005, real 2.2006)
 - add more races to championship.
 - move berniw/bt spline code into math to share it.
 - hunt down all glGet* crap during the simulation.
+- verify gear switching flames for car, e.g for the 360.
+- check all textures for the user selectable cars, they should be nicer.
 
 
 TODO for 1.3.0
 --------------
 - SDL port (SDL required anyway for portable sockets and threads).
 
+TODO for 1.9.x (pre 2.0 series, no release)
+--------------
+- Design networking, how to embed it into TORCS?
+- Networking prototype.
+- Gaming modes suitable for online races.
+- Cockpit inside view.
+
+TODO for 2.0.0
+--------------
+- Goal: best online racing game in terms of stability/playability. Most
+  commercial games really suck in this department, I hope we will do it better.
+- Initial Networking.
 
 
 TODO LATER
