--- a/torcs/torcs/installer/windows/README
+++ b/torcs/torcs/installer/windows/README
@@ -1,11 +1,45 @@
 Building Windows Installer for TORCS
 ------------------------------------
-Required tools from nsis.sourceforge.net (GPL):
-- NSIS 2.04
-- HM NIS EDIT 2.0.2
+Required tools from nsis.sourceforge.net:
+- NSIS 2.06
+- HM NIS EDIT 2.0.3
 
 - Build a TORCS release and copy the runtime directory into this (here).
 - Rename the runtime to base.
-- Open torcs.nsi with HM NIS EDIT 2.0.2 and compile the installer.
+- Open torcs.nsi with HM NIS EDIT 2.0.3 and compile the installer.
+
+
+Updating the torcs.nsi file
+---------------------------
+- Because the above tools do NOT yet support the maintainance with the gui,
+  here are some notes of me and for me.
+- Install cygwin.
+- Install previous TORCS version, assume path is torcspath. Important: do not
+  run it, generated files could confuse us.
+- compile new final version, do not run it, we assume it is in directory
+  CWD/base.
+- Get different files:
+
+		diff -rq base torcspath > gaga
+
+- We are just interested in vanished/new files for the installer, create a
+  template for file lines in the script, is good for existing directories with
+  additional content (one line):
+
+		cat gaga | sed 's/\(.*\)\(base.*\): \(.*\)$/  File "\2\/\3"/g' |
+		sed 's/\//\\/g' | grep -v Only
+
+- If a whole new tree should be added (e.g. olethros), do this (one line), be
+  aware that the order needs some fixing afterwards:
+
+		find base/drivers/olethros -name "*" | sed 's/\//\\/g' |
+		sed 's/^\(.*\.[a-z]\{3\}\)$/  File "\1"/g' |
+		sed 's/^base\(.*\)$/  SetOutPath "$INSTDIR\1"/g'
+
+- Run the installer and install to a clean directory, check with diff against
+  the fresh built tree from above.  
+
+
+
 
 
