--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -99,6 +99,10 @@ Bernhard.
 
 
 
+Changes since 1.2.3-test2
+-------------------------
+- Fixed wrong CWD set by installer for trackeditor.bat (Bernhard).
+
 
 Changes since 1.2.3-test1
 -------------------------
