--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -99,15 +99,17 @@ Bernhard.
 
 
 
-Changes since 1.2.3-test2
+Changes since 1.2.4-test2
 -------------------------
 - Fixed wrong CWD set by installer for trackeditor.bat (Bernhard).
 - Fixed OpenAL backend design flaw (run out of sources) (Bernhard).
 - Reviewed and applied penalty clearing/pit stop patches from Mart Kelder
   (Mart Kelder, Bernhard).
+- Prepared installation instructions for 1.2.4 (Bernhard).
 
-  
-Changes since 1.2.3-test1
+
+
+Changes since 1.2.4-test1
 -------------------------
 - Tried to fix problem with GL headers differences in Linux (Bernhard).
 - Car sound adjustments and new samples (Christos).
